--- a/templates/rango/about.html
+++ b/templates/rango/about.html
@@ -11,6 +11,8 @@
 	here is the about page. <br />
 	<strong>This tutorial has been put together by Tom Anderson</strong><br />
 
+	<p>Visits: {{ visits }}</p>
+
 	<img src="{%static 'images/rango.jpg' %}" alt="Picture of Rango" />
 	<img src="{{ MEDIA_URL }}cat.jpg" alt="Picture of a Cat." />
 {% endblock %}
